compiler/tests-spec/testData/psi/templates/identifiers/function.kt
fun <!ELEMENT!>() {}

suspend fun <!ELEMENT!>() {}

inline fun <T: Number> <!ELEMENT!>() = <!ELEMENT!>
